--- a/src/Components/Musk/Musk.css
+++ b/src/Components/Musk/Musk.css
@@ -1,7 +1,7 @@
 .product img{
     width: 280px;
     height: 240px;
-    border: 2px solid green;
+   
     border-radius: 10px;
     margin-top: 8px;
     
@@ -9,10 +9,38 @@
 }
 .product{
     width: 300px;
-    height: 408px;
+    height: 100%;
     font-family: "Roboto", sans-serif;
     border: 2px solid grey;
     border-radius: 10px;
     padding: 7px;
-    background-color: bisque;
+    background-color: rgb(216, 199, 176);
+    
+    
+}
+.product-info{
+    margin: 10px;
+}
+.product-info h2{
+    color:brown;
+}
+.btn-cart{
+    width: 100%;
+    font-size: large;
+    font-weight: 700;
+    background-color: whitesmoke;
+    padding: 7px;
+    border: none;
+    border-radius: 10px;
+    color:rgb(49, 97, 136) ;
+    
+    
+}
+.font{
+    margin-left: 10px;
+}
+.btn-cart:hover{
+    background-color: rgb(49, 97, 136);
+    font-weight: 700;
+    color: whitesmoke;
 }
