--- a/src/Components/Musks/Musks.css
+++ b/src/Components/Musks/Musks.css
@@ -8,18 +8,29 @@
     grid-template-columns: repeat(3,1fr);
     gap: 45px;
     width:50%;
+    margin: 10px;
 }
 .collection-cart{
     margin-left: 20px;
     background-color: whitesmoke;
     height: 20%;
+    font-family: 'Tangerine', cursive;;
     border-radius: 20px;
     margin-right: 10px;
     box-shadow: 10px 5px 5px  rgb(139, 135, 135);
     color: cornflowerblue;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: medium;
     position: sticky;
     top:0;
-    
-    
+}
+
+@media screen and (max-width:688px) {
+    .all-musk{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+@media screen and (max-width:688px) {
+    .collection-cart{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
